# skytransfer-app

./: README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DropZone.tsx  ReceiveCode.tsx  TransferProgress.tsx
frontend/src/lib/: crypto.ts  webrtc.ts
mobile/lib/: webrtc_service.dart
signaling-server/: package-lock.json  package.json
signaling-server/src/: server.ts
tauri-desktop/src-tauri/: Cargo.toml
tauri-desktop/src-tauri/src/: main.rs
